--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+
     <title>Portfolio Website</title>
 </head>
 <body>
@@ -16,89 +21,121 @@
     <section class="first-section">
         <div class="half">
             <div class="title">
-                <h1>Stay Focused on</h1>
-                <h1 class="color-title">Mission 2022</h1>
+                <h1>Welcome New Year</h1>
+                <h1 class="color-title">Target 2022</h1>
             </div>
-            <p>Nevermore the thrilled that each angels on perched remember be or. Fiend shall i raven i moment ebony of. Meant the on on a ungainly bends stood into. Made i.</p>
-            <a class="button" href="#">Explore Now</a>
-            <p>Scroll down to explore more about us</p>
+            <p>Happy New Year! After 1.5 years the corona situation is now under control. Though the corona situation is increasing day by day but it's better than 2020 and 2021 years. We hope this year(2022) the corona affected rate in decreased than previous year. Every people has some new plan about the new year. I am no exception about that. Let's explore the target of 2022</p>
+            <a class="button" href="#target-section-id">Lets Explore</a>
+            <p>Scroll down and see</p>
         </div>
         <div class="half">
-            <img src="images/person/person-5.png" alt="This is person 5 picture">
+            <img src="image/person-5.png" alt="This is person 5 picture">
         </div>
     </section>
     <!-- first-section ends -->
 
-    <!-- mission in 2022 section start -->
-    <h2>My Mission in <span class="color-title"> 2022</span></h2>
-    <section class="mission-section">
-        <div class="mission">
-            <div class="mission-item" id="first-item">
-                <img src="images/illustrators/illustrator-1.png" alt="First illustrator">
-                <h3>Mission</h3>
+    <!-- Target in 2022 section start -->
+    <h2>My Target in <span class="color-title"> 2022</span></h2>
+    <section class="target-section" id="target-section-id">
+        <div class="target">
+            <div class="target-item" id="first-item">
+                <img src="image/coding.png" alt="First target">
+                <h3>Web Development</h3>
                 <p>
-                    Of still mystery and in betook still, till he me that just. Fiend the tapping have name into napping dared lenore, bird or gloating no raven the forgiveness beguiling bore. Raven that moment bore throws the. Chamber grave said explore.
+                    From the early age of mine, I am very fond of Computer. Day by day I have learnt about programming. From there I fall in love in programming. When I saw programming hero start a new course on web development. I enlored on it. In 2022 my first target is to be a junior level web developer than higher and after that I wanna be a full time developer as my carrier.
                 </p>
             </div>
         
-            <div class="mission-item" id="second-item">
-                <img src="images/illustrators/illustrator-2.png" alt="Second illustrator">
-                <h3>Vission</h3>
+            <div class="target-item" id="second-item">
+                <img src="image/studying.png" alt="Second-target">
+                <h3>Study Well</h3>
                 <p>
-                    Of still mystery and in betook still, till he me that just. Fiend the tapping have name into napping dared lenore, bird or gloating no raven the forgiveness beguiling bore. Raven that moment bore throws the. Chamber grave said explore.
+                    Study is the main part of every student. From the previous year it feels me I am not give enough time on my study. Both academic and non-academic. But this time I realize that things. So, this year my another target is, I am trying hard to focus on my study that both academic and non-academic study.
                 </p>
             </div>
         
-            <div class="mission-item" id="third-item">
-                <img src="images/illustrators/illustrator-3.png" alt="Third illustrator">
-                <h3>Goal</h3>
+            <div class="target-item" id="third-item">
+                <img src="image/excercise.png" alt="Third target">
+                <h3>Exercise</h3>
                 <p>
-                    Of still mystery and in betook still, till he me that just. Fiend the tapping have name into napping dared lenore, bird or gloating no raven the forgiveness beguiling bore. Raven that moment bore throws the. Chamber grave said explore.
+                    We know that, A healthy body is the foundation of a healthy mind and a happy and healthy life. If body is happy than we are happy. So, to concentrate this target we must keep the body fit. That's why I am enroled this exercise on my target list.
                 </p>
             </div>
         </div>
     </section>
-    <!-- mission in 2022 section end -->
+    <!-- target in 2022 section end -->
 
     <!-- develop section start -->
     <section class="flexible">
-        <div class="half image-part">
-            <img src="images/pictures/coding.png" alt="">
+        <div class="half thirty-percent-part">
+            <img src="image/web.jpeg" alt="Web" id="web-id">
         </div>
-        <div class="half description-part">
-            <h2>Develop</h2>
-            <h2>Without Limits</h2>
+        <div class="half seventy-percent-part">
+            <h2>Why</h2>
+            <h2>Web Development</h2>
             <p>
-               Outpour it and shore just a of surely, that back fearing repeating the, so wondering door on rare separate sitting or, window lamplight lord nevermore on stood, the perched from tapping thing separate i stillness the, but was land all. 
+               Nowadays every company or organization or educational institute has their own website. To make these website well we need to be good developer. Good developer is need because lack of their skills hacker can attack their website and they can lost their important credentials. Website is need to connect them worldly. But the website need to good. Thats why I want to learn web development.
             </p>
-            <a class="button" href="#">Read the Documentation</a>
+            <a target="_blank" class="button" href="https://www.google.com/search?q=why+web+development+is+important&rlz=1C1BNSD_enBD963BD963&sxsrf=AOaemvIxcqu_gswJN8Tfz5hyZIpTkgxs4Q%3A1641440700386&ei=vGXWYa7aFtiNseMPh9ylgAs&ved=0ahUKEwiuqPaOm5z1AhXYRmwGHQduCbAQ4dUDCA4&uact=5&oq=why+web+development+is+important&gs_lcp=Cgdnd3Mtd2l6EAMyBAgjECcyBQgAEIAEMgYIABAIEB4yBggAEAgQHjIGCAAQCBAeMgYIABAIEB4yBggAEAgQHjIGCAAQCBAeMgYIABAIEB46BwgjELADECc6BwgAEEcQsAM6BwgAELADEEM6BggAEAcQHjoECAAQDToICAAQCBAHEB5KBAhBGABKBAhGGABQiBZY5kNg4U9oAnACeAOAAYgOiAGrOZIBCTAuOC43LTEuM5gBAKABAcgBCsABAQ&sclient=gws-wiz">Learn more about Web Development</a>
         </div>
     </section>
       <!-- develop section start -->
 
-      <!-- know our global community start -->
+      <!-- study start -->
       <section class="flexible">
-        <div class="half description-part">
-            <h2>Develop</h2>
-            <h2>Without Limits</h2>
+        <div class="half seventy-percent-part">
+            <h2>Why</h2>
+            <h2>Study</h2>
             <p>
-               Outpour it and shore just a of surely, that back fearing repeating the, so wondering door on rare separate sitting or, window lamplight lord nevermore on stood, the perched from tapping thing separate i stillness the, but was land all. 
+               Study is the first and foremost duty of every student. Since I am a student, so I need to read very all thats acamedic and non-academic. Since I enroled in web develop course so need to study regulary.
             </p>
-            <a class="button" href="#">Read the Documentation</a>
+            <a target="_blank" class="button" href="https://www.google.com/search?q=why+study+in+important+for+every+students&rlz=1C1BNSD_enBD963BD963&oq=why+study+in+important+for+every+students&aqs=chrome..69i57j33i22i29i30.17608j0j7&sourceid=chrome&ie=UTF-8">Read more about Study</a>
         </div>
-        <div class="half image-part">
+        <div class="half thirty-percent-part">
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
-      <!-- know our global community ends -->
+      <!-- study ends -->
 
-    <section>
-        This is my area
+      <!-- bonus part start -->
+    <section class="education-section>
+        <div class="thirty-percent-part" id="education">
+            <h4>Eudcation:</h4>
+        </div>
+        <div class="seventy-percent-part" id="education-institude">
+            <ul>
+                <li>
+                    <h5>University of Dhaka</h5>
+                    <p>Department of Fisheries</p>
+                    <p>2019-present</p>
+                    <p>Web: <a target="_blank" href="https://du.ac.bd/">https://du.ac.bd/</a></p>
+                </li>
+                <li>
+                    <h5>BIAM Model Scholl & College, Rangpur</h5>
+                    <p>HSC</p>
+                    <p>2016-2018</p>
+                    <p>Web: <a target="_blank" href="https://bmscr.edu.bd/">https://bmscr.edu.bd/</a></p>
+                </li>
+                <li>
+                    <h5>RCCI Public School & College</h5>
+                    <p>SSC</p>
+                    <p>2014-2016</p>
+                    <p>Page: <a href="https://www.facebook.com/rccirangpur/">RCCI Public School & Collge, Rangpur</a></p>
+                </li>
+                <li>
+                    <h5>Aditmari G.S. Model High School, Aditmari, Lalmonirhat</h5>
+                    <p>Class: 6-8</p>
+                    <p>2011-2015</p>
+                    <p>Page: <a href="https://www.facebook.com/watch/GAGSMSC/">Aditmari GS Model School, Aditmari</a></p>
+                </li>
+            </ul>
+        </div>
     </section>
+    <!-- bonus part ends -->
 
     <footer>
         <h4>Mission <span>2022</span></h4>
-        <small>Hard work, Perdskafj ksfa jkf jaf </small>
+        <small>&copy; Work Harder, Think Positive</small>
     </footer>
 </body>
 </html>
