--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+   
+   <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -12,7 +14,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-
+    <!-- google fonts ends -->
+    
     <title>Portfolio Website</title>
 </head>
 <body>
@@ -29,7 +32,7 @@
             <p>Scroll down and see</p>
         </div>
         <div class="half">
-            <img src="image/person-5.png" alt="This is person 5 picture">
+            <img id="profile-img" src="image/profile.jpg" alt="This is person 5 picture">
         </div>
     </section>
     <!-- first-section ends -->
@@ -66,7 +69,7 @@
     <!-- target in 2022 section end -->
 
     <!-- develop section start -->
-    <section class="flexible">
+    <section class="flexible" id="why-web">
         <div class="half thirty-percent-part">
             <img src="image/web.jpeg" alt="Web" id="web-id">
         </div>
@@ -98,11 +101,11 @@
       <!-- study ends -->
 
       <!-- bonus part start -->
-    <section class="education-section>
-        <div class="thirty-percent-part" id="education">
-            <h4>Eudcation:</h4>
+    <section class="flexible">
+        <div class="edu-class thirty-percent-part">
+            <h4>Education: </h4>  
         </div>
-        <div class="seventy-percent-part" id="education-institude">
+        <div class="edu-institude seventy-percent-part">
             <ul>
                 <li>
                     <h5>University of Dhaka</h5>
@@ -110,18 +113,21 @@
                     <p>2019-present</p>
                     <p>Web: <a target="_blank" href="https://du.ac.bd/">https://du.ac.bd/</a></p>
                 </li>
+                <br>
                 <li>
                     <h5>BIAM Model Scholl & College, Rangpur</h5>
                     <p>HSC</p>
                     <p>2016-2018</p>
                     <p>Web: <a target="_blank" href="https://bmscr.edu.bd/">https://bmscr.edu.bd/</a></p>
                 </li>
+                <br>
                 <li>
-                    <h5>RCCI Public School & College</h5>
+                    <h5>RCCI Public School & College, Rangpur</h5>
                     <p>SSC</p>
                     <p>2014-2016</p>
                     <p>Page: <a href="https://www.facebook.com/rccirangpur/">RCCI Public School & Collge, Rangpur</a></p>
                 </li>
+                <br>
                 <li>
                     <h5>Aditmari G.S. Model High School, Aditmari, Lalmonirhat</h5>
                     <p>Class: 6-8</p>
