remove images forlder

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <!-- google fonts ends -->
-    
+
     <title>Portfolio Website</title>
 </head>
 <body>
@@ -95,7 +95,7 @@
             <a target="_blank" class="button" href="https://www.google.com/search?q=why+study+in+important+for+every+students&rlz=1C1BNSD_enBD963BD963&oq=why+study+in+important+for+every+students&aqs=chrome..69i57j33i22i29i30.17608j0j7&sourceid=chrome&ie=UTF-8">Read more about Study</a>
         </div>
         <div class="half thirty-percent-part">
-            <img src="images/pictures/project.png" alt="">
+            <img src="image/project.png" alt="Projects">
         </div>
     </section>
       <!-- study ends -->
