--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Scroll down and see</p>
         </div>
         <div class="half">
-            <img id="profile-img" src="image/profile.jpg" alt="This is person 5 picture">
+            <img id="profile-img" src="image/profile.jpg" alt="This is profile picture">
         </div>
     </section>
     <!-- first-section ends -->
